# WayNotify

./: .clangd  CMakeLists.txt  Depinstall.md  README.md
src/: dbus_listener.cpp  dbus_listener.hpp  main.cpp  notification_handler.cpp  notification_handler.hpp  sdl_helper.cpp  sdl_helper.hpp  sdl_render.cpp  sdl_render.hpp
tests/: notes.md  toggleSwayNC.sh
thoughts/: 2025-05-04-Note-15-50.xopp
